# datascrap

./: .dockerignore  .env.example  .gitignore  README.md  go.mod  salario_composto_universal_diagnostico.sql  salario_composto_universal_fix_valores_v2_diagnostico.sql  salario_composto_universal_fix_valores_v3_diagnostico.sql
.github/workflows/: daily-scrap.yml
apps/api/: Dockerfile  README.md  app.py  pyproject.toml
apps/scraper-go/: README.md  main.go  main_test.go  resilient_http.go
apps/web/: Dockerfile  README.md  index.html  next.config.mjs  nginx.conf  package-lock.json  (+1 more)
backend/: README.md  app.py
docs/: README.md  data-contract.md  phase5-plan.md
infra/: README.md
notebooks/: README.md
pipelines/: README.md  build_snapshot.py  clean_jobs.py  jobspy_scraper.py  requirements.txt  sync_jobs_db.py
sala/: diagnostico_classificacao_divergencias.sql  diagnostico_fontes_divergencias_dinamico.sql  diagnostico_fontes_divergencias_marco.sql  diagnostico_impacto_scfin_marco.sql  diagnostico_impacto_scfin_marco_standalone.sql  diagnostico_impacto_scfin_marco_v4_standalone.sql  diagnostico_match_fonte_original.sql  docker-compose.prod.yml  docker-compose.yml  salario_composto_universal_diagnostico.sql  salario_composto_universal_diagnostico_teste_marco_data_base.sql  salario_composto_universal_fix_valores_v1_diagnostico.sql  salario_composto_universal_fix_valores_v3_diagnostico.sql  salario_composto_universal_fix_valores_v4_diagnostico.sql  salario_composto_universal_teste_marco_data_base.sql
scripts/: README.md  jobspy_scraper.py
tests/: README.md
(+12 files in other folders)
