[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-platform-api"
version = "0.1.0"
description = "API Flask para o job platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["Flask>=3.0"]

[tool.setuptools]
py-modules = ["app"]
